--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,13 @@
 [tool.poetry]
 name = "digitalearth"
-version = "0.1.5"
+version = "0.1.6"
 description = "Geo-spatial Visualization package"
 authors = ["Mostafa Farrag <moah.farag@gmail.com>"]
 license = "GNU General Public License v3"
 keywords=["matplotlib", "maps", "visualization", "gdal", "rasaterio"]
+readme = "README.md"
+repository = "https://github.com/MAfarrag/Digital-Earth"
+documentation = "https://Hapi-hm.readthedocs.io/"
 classifiers=[
         "Development Status :: 5 - Production/Stable",
         "Environment :: Console",
@@ -19,18 +22,24 @@ classifiers=[
         "Intended Audience :: Developers",
     ]
 
+packages = [
+    { include = "digitalearth" },
+#    { include = "extra_package/**/*.py" },
+]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
 numpy = "^1.23.3"
 matplotlib = "^3.5.3"
+loguru = "^0.6.0"
+#gdal = "3.4.3"
 gdal = {url = "https://download.lfd.uci.edu/pythonlibs/archived/GDAL-3.4.3-cp39-cp39-win_amd64.whl" }
 fiona = {url = "https://download.lfd.uci.edu/pythonlibs/archived/Fiona-1.8.21-cp39-cp39-win_amd64.whl"}
-loguru = "^0.6.0"
 #cartopy = {url = "https://download.lfd.uci.edu/pythonlibs/archived/Cartopy-0.20.2-cp39-cp39-win_amd64.whl"}
 #geoplot = "0.5.1"
 cleopatra = "^0.2.3"
-pyramids-gis = "^0.2.5"
+pyramids-gis = "^0.2.6"
+
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
@@ -47,6 +56,41 @@ reorder-python-imports = "^3.8.2"
 pre-commit-hooks = "^4.3.0"
 
 
+[tool.poetry.scripts]
+
+[tool.coverage.paths]
+source = ["digitalearth", "*/site-packages"]
+
+
+
+[tool.coverage.run]
+branch = true
+source = ["digitalearth"]
+
+
+[tool.coverage.report]
+show_missing = true
+fail_under = 40
+
+
+[tool.isort]
+multi_line_output=3
+include_trailing_comma=true
+force_grid_wrap=0
+use_parentheses=true
+line_length=88
+ensure_newline_before_comments=true
+profile="black"
+
+
+[tool.pytest.ini_options]
+minversion = "7.0"
+addopts = "-ra -q"
+testpaths = [
+    "tests",
+]
+
+
 [build-stem]
-requires = ["poetry-core>=1.0.0"]
+requires = ["setuptools", "poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
