--- a/environment.yml
+++ b/environment.yml
@@ -1,13 +1,14 @@
 channels:
   - conda-forge
 dependencies:
-  - python >=3.9,<3.12
-  - pip >=22.2.2
+  - python >=3.9,<3.15
+  - pip >=22.3.1
   - numpy >=1.23.3
-  - gdal >=3.4.3
-  - matplotlib >=3.5.3,<3.6.0
-  - pyramids >=0.2.4
-  - pip:
-      - cleopatra >=0.2.2
-      - loguru >=0.6.0
-#      - geoplot >=0.5.1
+  - cleopatra >=0.2.3
+  - pyramids >=0.2.9
+  - gdal >=3.5.3
+  - geopandas >=0.12.2
+  - geoplot >=0.5.1
+  - loguru >=0.6.0
+  - pytest >=7.1.3
+  - pytest-cov =4.0.0
