--- a/environment.yml
+++ b/environment.yml
@@ -3,12 +3,12 @@ channels:
 dependencies:
   - python >=3.9,<3.15
   - pip >=22.3.1
-  - numpy >=1.23.3
-  - cleopatra >=0.2.3
-  - pyramids >=0.2.9
+  - numpy ==1.23.5
   - gdal >=3.5.3
   - geopandas >=0.12.2
   - geoplot >=0.5.1
+  - cleopatra >=0.2.4
+  - pyramids ==0.2.10
   - loguru >=0.6.0
-  - pytest >=7.1.3
-  - pytest-cov =4.0.0
+  - pytest >=7.2.0
+  - pytest-cov ==4.0.0
