--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,4 @@ geoplot >=0.5.1
 loguru >=0.6.0
 numpy ==1.23.5
 pip >=22.3.1
-pyramids ==0.2.10
-pytest >=7.2.0
-pytest-cov ==4.0.0
-python >=3.9,<3.15
+pyramids-gis ==0.2.11
