--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-cleopatra >=0.2.4
+cleopatra >=0.2.7
 gdal >=3.5.3
 geopandas >=0.12.2
 geoplot >=0.5.1
 loguru >=0.6.0
-numpy ==1.23.5
+numpy >=1.24.1
 pip >=22.3.1
-pyramids-gis ==0.2.11
+pyramids-gis >=0.3.2
